--- a/01-html_and_css/example/index.html
+++ b/01-html_and_css/example/index.html
@@ -10,6 +10,18 @@
     <title>HTML & CSS</title>
 </head>
 <body>
-
+    <header>
+        <h1>Todo-list</h1>
+    </header>
+    <main>
+        <ol>
+            <li>Do the laundry</li>
+            <li>Do the dishes</li>
+            <li></li>
+        </ol>
+    </main>
+    <footer>
+        <span>Example 1</span>
+    </footer>
 </body>
 </html>
