--- a/01-html_and_css/example/index.html
+++ b/01-html_and_css/example/index.html
@@ -14,10 +14,31 @@
         <h1>Todo-list</h1>
     </header>
     <main>
-        <ol>
-            <li>Do the laundry</li>
-            <li>Do the dishes</li>
-            <li></li>
+        <ol class="todo-list">
+            <li>
+                <label class="todo-list-item">
+                    <h2 class="todo-item-title">Take the kids to school</h2>
+                    <input class="todo-item-checkbox" type="checkbox" checked>
+                </label>
+            </li>
+            <li>
+                <label class="todo-list-item">
+                    <h2 class="todo-item-title">Do the laundry</h2>
+                    <input class="todo-item-checkbox" type="checkbox">
+                </label>
+            </li>
+            <li>
+                <label class="todo-list-item">
+                    <h2 class="todo-item-title">Do the dishes</h2>
+                    <input class="todo-item-checkbox" type="checkbox">
+                </label>
+            </li>
+            <li>
+                <label class="todo-list-item">
+                    <h2 class="todo-item-title">Go grocery shopping</h2>
+                    <input class="todo-item-checkbox" type="checkbox">
+                </label>
+            </li>
         </ol>
     </main>
     <footer>
