--- a/01-html_and_css/example/index.html
+++ b/01-html_and_css/example/index.html
@@ -17,26 +17,38 @@
         <ol class="todo-list">
             <li>
                 <label class="todo-list-item">
-                    <h2 class="todo-item-title">Take the kids to school</h2>
-                    <input class="todo-item-checkbox" type="checkbox" checked>
+                    <span class="todo-list-counter"></span>
+                    <div class="todo-content">
+                        <h2 class="todo-item-title">Take the kids to school</h2>
+                        <input class="todo-item-checkbox" type="checkbox" checked>
+                    </div>
                 </label>
             </li>
             <li>
                 <label class="todo-list-item">
-                    <h2 class="todo-item-title">Do the laundry</h2>
-                    <input class="todo-item-checkbox" type="checkbox">
+                    <span class="todo-list-counter"></span>
+                    <div class="todo-content">
+                        <h2 class="todo-item-title">Do the laundry</h2>
+                        <input class="todo-item-checkbox" type="checkbox">
+                    </div>
                 </label>
             </li>
             <li>
                 <label class="todo-list-item">
-                    <h2 class="todo-item-title">Do the dishes</h2>
-                    <input class="todo-item-checkbox" type="checkbox">
+                    <span class="todo-list-counter"></span>
+                    <div class="todo-content">
+                        <h2 class="todo-item-title">Do the dishes</h2>
+                        <input class="todo-item-checkbox" type="checkbox">
+                    </div>
                 </label>
             </li>
             <li>
                 <label class="todo-list-item">
-                    <h2 class="todo-item-title">Go grocery shopping</h2>
-                    <input class="todo-item-checkbox" type="checkbox">
+                    <span class="todo-list-counter"></span>
+                    <div class="todo-content">
+                        <h2 class="todo-item-title">Go grocery shopping</h2>
+                        <input class="todo-item-checkbox" type="checkbox">
+                    </div>
                 </label>
             </li>
         </ol>
