--- a/01-html_and_css/project/index.html
+++ b/01-html_and_css/project/index.html
@@ -1,15 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>HTML & CSS</title>
-</head>
-<body>
-
-</body>
+  </head>
+  <body>
+    <header>Character Stats</header>
+    <h1>Stats window</h1>
+    <ul class="lists-stats">
+      <li class="attribute">
+        <div class="stats">Vitality</div>
+        <div class="attribute-right-wrapper">
+          <button class="attribute-dec statsbtn">-</button>
+          <div>1</div>
+          <button class="attribute-inc statsbtn">+</button>
+        </div>
+      </li>
+    </ul>
+  </body>
 </html>
